Optimise rollout create - single save + groups saveAll
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>